--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             <h1>Hi!</h1>
             <h1 class="hello">I am <span class="name">Rishita Srivastava</span></h1>
             <h3 class="prof">a <span class="typing">web Developer.</span></h3>
-            <p>A Trainee At Big Data Centre Of Excellence (BDCOE).</p>
+            <p>Member of Big Data Centre Of Excellence (BDCOE).</p>
             <br>
             <p>fresh  and Energetic Web Designer creating and maintaining functional, attractive and responsive websites. Clear understanding of mordern technologies and better design..!!</p>
-        <button onclick="window.print()" class="btn1">Download <i class="fa fa-download"></i></button>
+        <button onclick="window.print()" class="btn1">Download CV <i class="fa fa-download"></i></button>
         </div>
         <div class="image">
             <img src="asset/img1.jpg" height="350">
         </div>    
         </div>
-        <div id="clock">1</div>
+        <!-- <div id="clock">1</div> -->
     </section>
     <script src="index.js"></script>
 </body>
