--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,23 @@
     <title>Contact Me</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="style/contact.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 </head>
 <body>
-
+    <section class="header">
+        <div class="user">
+            <nav>
+                <label class="logo">Portfolio</label>
+                <label id="icon1"><i class="fa fa-bars" onclick="showMenu()"></i></label>
+                <ul>
+                    <li><a href="index.html"  class="fa fa-home"> Home</a></li>
+                    <li><a href="about.html" class="fa fa-address-card"> About</a></li>
+                    <li><a href="skills.html" class="fa fa-user"> Skills</a></li>
+                    <li><a href="#" id="active" class="fa fa-phone"> Contact</a></li>
+                </ul>
+            </nav>
+         </div>
+        </section>
     <div class="contact">
         <h1 class="heading"><span>Contact </span>Me</h1><hr>
         <div class="row">
@@ -17,9 +31,6 @@
                 <h3 class="info"><i class="fa fa-envelope"></i> xyz@gmail.com</h3>
                 <h3 class="info"><i class="fa fa-phone"></i> +111-222-3333</h3>
                 <h3 class="info"><i class="fa fa-map-pin"></i> Ghaziabad, India 201009</h3>
-                <div>
-                    <a href="index.html"><button id="btn" class="fa fa-backward"></button></a> 
-                </div>
             </div>
             <form action="">
                 <input type="text" placeholder="Name" class="box" required>
@@ -40,5 +51,6 @@
     </footer>
     </div>
     </div>
+    <script src="index.js"></script>
 </body>
 </html>
