toggle in all pages

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         <div class="user">
             <nav>
                 <label class="logo">Portfolio</label>
-                <label id="icon1"><i class="fa fa-bars" onclick="showMenu()"></i></label>
+                <label id="icon1"><i class="fa fa-bars" onclick=showMenu()></i></label>
                 <ul>
                     <li><a href="index.html"  class="fa fa-home"> Home</a></li>
                     <li><a href="#" id="active" class="fa fa-address-card"> About</a></li>
@@ -44,5 +44,6 @@
             <p class="text">I'm persuing my B-Tech from AKGEC with CSE(AIML). Currently I'm in my second year and secured 9.1 SGPA in my first semester.</p>
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
