--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="user">
         <nav>
             <label class="logo">Portfolio</label>
-            <label id="icon1"><i class="fa fa-bars" onclick="showMenu()"></i></label>
+            <label id="icon1"><i class="fa fa-bars" onclick=showMenu()></i></label>
             <ul>
                 <li><a href="#home" id="active" class="fa fa-home"> Home</a></li>
                 <li><a href="about.html" class="fa fa-address-card"> About</a></li>
