--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <div class="user">
             <nav>
                 <label class="logo">Portfolio</label>
-                <label id="icon1"><i class="fa fa-bars" onclick="showMenu()"></i></label>
+                <label id="icon1"><i class="fa fa-bars" onclick=showMenu()></i></label>
                 <ul>
                     <li><a href="index.html"  class="fa fa-home"> Home</a></li>
                     <li><a href="about.html" class="fa fa-address-card"> About</a></li>
@@ -24,7 +24,7 @@
             </nav>
          </div>
         </section>
-    <div class="contact">
+    <section class="contact">
         <h1 class="heading"><span>Contact </span>Me</h1><hr>
         <div class="row">
             <div class="content">
@@ -49,8 +49,7 @@
             <a href="https://www.linkedin.com" id="ln" class="fab fa-linkedin"></a>
         </div>
     </footer>
-    </div>
-    </div>
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
